# growth-tools

./: .env.example  README.md  pyproject.toml  requirements.txt  run_api.py  run_reddit.py
.github/workflows/: ci.yml
examples/: sample-icp.env  sample-leads.json  test-output.txt
growth_tools/: run_discord.py
growth_tools/api/: main.py
growth_tools/core/: db.py
growth_tools/systems/: discord_bot.py  linkedin_bot.py  website_auditor.py
src/api/: main.py
src/config/: settings.py
src/core/: llm.py
src/growth_tools/: cli.py  config_loader.py  notifications.py  run_api.py  run_reddit.py
src/growth_tools/api/: main.py
src/growth_tools/core/: llm.py  scoring.py
src/growth_tools/systems/: discord_bot.py  github_auditor.py  linkedin_enricher.py  reddit_capture.py
src/systems/: crm_sequencer.py  linkedin_enricher.py  reddit_capture.py  website_auditor.py
tests/: test_brand_config.py
